Добавлены запросы и тестирование 8